--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
   height: 550px;
 }
 .banner h1 {
-  text-align: right;
+  text-align: center;
   font-size: 80px;
   padding: 200px 100px;
   float: right;
